<resources>
    <string name="app_name">Flaminius2k19</string>

    <string name="sympo_tagline">A National level Symposium\nBy Department Of Information Technology\n&amp; Society Of Information Technology Engineers</string>
    <string name="sympo_date">On September 13, 2019</string>
    <string name="venue_name">At Meenakshi College of Engineering</string>
    <string name="venue_address">#12, Vembuliamman Koil St,\nWest K. K. Nagar, Chennai- 78</string>
    <string name="venue_location">https://goo.gl/maps/nsrruRShrsbV23hF6</string>

    <string name="register">Register</string>
    <string name="venue">Venue</string>
    <string name="follow">Follow us on</string>

    <string name="hash_tags">#MCE #IT #SEP13</string>
    <string name="footer">Copyright &#169; Flaminius2k19</string>

    <!--- Follow links -->
    <string name="facebook_page">https://www.facebook.com/flaminius2k19</string>
    <string name="instagram_page">https://instagram.com/flaminius2k19</string>
    <string name="twitter_page">https://twitter.com/flaminius2k19</string>
    <string name="website_page">https://flaminius2k19.web.app</string>
    <string name="follow_website">Visit Website</string>
    <string name="follow_twitter">Follow Twitter</string>
    <string name="follow_facebook">Follow Facebook</string>
    <string name="follow_instagram">Follow Instagram</string>

    <string name="nontechnical_events">Non Technical Events</string>
    <string name="technical_events">Technical Events</string>
    <string name="coordinators">Coordinators</string>
    <string name="spread_the_word">Spread the world</string>
    <string name="share_message">Flaminius 2k19 Symposium on Sept 13 at MCE.\nRegister through https://flaminius2k19.web.app </string>
    <string name="share_using">Share using</string>
    <string name="share_subject">Flaminius 2k19 Symposium</string>

    <string name="event">Event</string>
    <string name="food_preferences">Food Preferences</string>
    <string name="department">Department</string>
    <string name="college">College</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>

    <string name="registration_fee_amount">\u20B9200/-</string>
    <string name="registration_fee">Registration Fee</string>
    <string name="registration_fee_info">The registration amount of \u20B9200/- should be paid on spot at the time of symposium.</string>

    <string name="error_enter_name">Enter your name</string>
    <string name="error_enter_college">Enter you college name</string>
    <string name="error_enter_email">Enter valid email</string>
    <string name="error_select_valid_department">Select your department</string>
    <string name="error_select_valid_person_count">Select person count (1&#8211;5)</string>
    <string name="error_select_valid_food_pref">Select you food preference</string>
    <string name="error_enter_phone">Enter your phone number</string>

    <string-array name="m">
        <item>a</item>
        <item>b</item>
        <item>c</item>
        <item>d</item>
        <item>e</item>
    </string-array>

    <string-array name="departments">
        <item>B.Tech. Information Technology</item>
        <item>B.E. Computer Science and Engineering</item>
        <item>B.C.A</item>
        <item>M.C.A</item>
        <item>Other</item>
    </string-array>

    <string-array name="food_prefs">
        <item>Veg</item>
        <item>Non Veg</item>
    </string-array>

    <string name="title_activity_details">DetailsActivity</string>
    <string name="answer">ANSWER</string>
    <string name="answer_low">answer</string>
    <string name="connect">CONNECT</string>
    <string name="years">years</string>
    <string name="asked">asked</string>
    <string name="profile">"'s Profile"</string>

    <string name="transition_name" translatable="false">name</string>
    <string name="transition_card" translatable="false">card</string>
    <string name="transition_image" translatable="false">image</string>
    <string name="transition_details" translatable="false">details</string>

    <string name="contact_details">Contact Details</string>
    <string name="rules">Rules</string>
    <string name="description">Description</string>
    <string name="online_events">Online Events</string>

    <string name="contact_us">Contact Us</string>
    <string name="contact_email">flaminius2k19@gmail.com</string>
    <string name="contact_president">&#160;&#160;+917904013122</string>
    <string name="contact_secretary">&#160;&#160;+916380667500</string>
    <string name="contact_event_coordinator">&#160;&#160;+919840543412</string>
    <string name="contact_president_label">President</string>
    <string name="contact_secretary_label">Secretary</string>
    <string name="contact_event_coordinator_label">Event Coordinator</string>
    <string name="facebook_page_id">fb://page/103755580976797</string>
</resources>
