<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_bg"
    android:clipChildren="false"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipChildren="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/name"
                android:text="@string/name" />

            <EditText
                android:id="@+id/name"
                style="@style/Field"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/email"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email"
                style="@style/Field"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/phone"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/phone"
                style="@style/Field"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="phone"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/college"
                android:text="@string/college" />

            <EditText
                android:id="@+id/college"
                style="@style/Field"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/department"
                android:text="@string/department" />

            <com.jaiselrahman.hintspinner.HintSpinner
                android:id="@+id/department"
                style="@style/Field"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp" />

            <TextView
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/foodPrefs"
                android:text="@string/food_preferences" />

            <com.jaiselrahman.hintspinner.HintSpinner
                android:id="@+id/foodPrefs"
                style="@style/Field"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp" />

            <!--<TextView-->
            <!--style="@style/Label"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:labelFor="@id/event"-->
            <!--android:text="@string/event" />-->

            <!--<com.ramotion.directselect.DSDefaultPickerBox-->
            <!--android:id="@+id/event"-->
            <!--style="@style/Field"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:padding="15dp" />-->

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/primary_btn"
                android:onClick="onRegisterClick"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:finalCornerAngle="20dp"
                app:initialCornerAngle="2dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />
        </LinearLayout>
    </ScrollView>

    <!--<com.ramotion.directselect.DSListView-->
    <!--android:id="@+id/event_list"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@android:color/white"-->
    <!--android:clickable="true"-->
    <!--android:focusable="true"-->
    <!--android:visibility="invisible"-->
    <!--app:cell_font_size="8sp"-->
    <!--app:data_array="@array/m"-->
    <!--app:picker_box_view="@id/event"-->
    <!--app:scale_animations="true"-->
    <!--app:scale_animations_factor="1.3"-->
    <!--app:scale_animations_pivot_center="false"-->
    <!--app:selector_background="@color/hintColor"-->
    <!--tools:ignore="UnusedAttribute" />-->
</LinearLayout>

