<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:clipChildren="false"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView
            android:id="@+id/sympo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationY="-20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:contentPaddingTop="20dp"
            app:layout_constraintBottom_toTopOf="@id/venue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shimmer_base_alpha="1"
                app:shimmer_duration="1800"
                app:shimmer_highlight_alpha="0.2"
                app:shimmer_repeat_delay="100"
                app:shimmer_width_ratio="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingExtra="2dp"
                    android:paddingBottom="5dp"
                    android:text="@string/sympo_tagline"
                    android:textAlignment="center" />

            </com.facebook.shimmer.ShimmerFrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/venue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toTopOf="@id/registerShimmer"
            app:layout_constraintTop_toBottomOf="@id/sympo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_direction"
                    android:drawableRight="@drawable/ic_direction"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/venue"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:paddingBottom="2dp"
                    android:text="@string/venue_name"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/venue_address"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/registerShimmer"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toTopOf="@id/follow"
            app:layout_constraintEnd_toStartOf="@id/boom_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/venue">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:shimmer_base_alpha="1"
                app:shimmer_duration="1800"
                app:shimmer_highlight_alpha="0.75"
                app:shimmer_repeat_delay="100"
                app:shimmer_width_ratio="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />
            </com.facebook.shimmer.ShimmerFrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerShimmer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_follow"
                    android:drawableRight="@drawable/ic_follow"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/follow"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="@android:color/darker_gray" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:id="@+id/follow_facebook"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/follow_facebook"
                        android:src="@drawable/ic_facebook"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/follow_instagram"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/follow_instagram"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/follow_instagram"
                        android:src="@drawable/ic_instagram"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/follow_twitter"
                        app:layout_constraintStart_toEndOf="@id/follow_facebook"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/follow_twitter"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/follow_twitter"
                        android:src="@drawable/ic_twitter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/follow_website"
                        app:layout_constraintStart_toEndOf="@id/follow_instagram"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:id="@+id/follow_website"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/follow_website"
                        android:src="@drawable/ic_website"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/follow_twitter"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.nightonke.boommenu.BoomMenuButton
            android:id="@+id/boom_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.9"
            android:scaleY="0.9"
            app:bmb_buttonEnum="ham"
            app:bmb_buttonPlaceEnum="buttonPlace_ham_5"
            app:bmb_dimColor="#EE000000"
            app:bmb_hideDuration="250"
            app:bmb_normalColor="@color/colorPrimary"
            app:bmb_piecePlaceEnum="piecePlace_ham_5"
            app:bmb_shadowColor="#66000000"
            app:layout_constraintBottom_toBottomOf="@id/registerShimmer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sympo"
            app:layout_constraintTop_toTopOf="@id/registerShimmer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>