<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UnusedAttribute">

        <ImageView
            android:id="@+id/event_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/details_top_background"
            android:transitionName="@string/transition_image"
            android:translationZ="0dp"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/gradient"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/details_image_gradient"
            app:layout_constraintBottom_toBottomOf="@id/event_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/event_name_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:transitionName="@string/transition_name"
            android:translationY="15dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:contentPaddingLeft="15dp"
            app:contentPaddingRight="15dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_min="wrap"
            app:layout_constraintWidth_percent="0.5">

            <TextView
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Event Title" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="80dp"
            android:minHeight="@dimen/event_item_height"
            android:transitionName="@string/transition_card"
            app:cardCornerRadius="5dp"
            app:contentPadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/gradient"
            app:layout_constraintVertical_bias="0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="@string/transition_details">

                <TextView
                    android:id="@+id/event_tagline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/textColorSecondary"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Tagline" />


                <TextView
                    android:id="@+id/event_description_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:padding="5dp"
                    android:text="@string/description"
                    android:textColor="@color/textColorTertiary"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/event_tagline" />

                <TextView
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lineSpacingExtra="3dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/textColorTertiary"
                    app:layout_constraintTop_toBottomOf="@id/event_description_header"
                    tools:text="@tools:sample/lorem/random" />

                <TextView
                    android:id="@+id/event_rules_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:padding="5dp"
                    android:text="@string/rules"
                    android:textColor="@color/textColorTertiary"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/event_description" />

                <TextView
                    android:id="@+id/event_rules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lineSpacingExtra="3dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/textColorTertiary"
                    app:layout_constraintTop_toBottomOf="@id/event_rules_header"
                    tools:layout_editor_absoluteX="0dp"
                    tools:text="@tools:sample/lorem/random" />

                <TextView
                    android:id="@+id/event_contact_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lineSpacingExtra="3dp"
                    android:padding="5dp"
                    android:text="@string/contact_details"
                    android:textColor="@color/textColorTertiary"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/event_rules" />

                <TextView
                    android:id="@+id/event_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="email|phone"
                    android:ellipsize="end"
                    android:lineSpacingExtra="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/textColorTertiary"
                    app:layout_constraintTop_toBottomOf="@id/event_contact_header"
                    tools:text="@tools:sample/lorem/random" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>